--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="css/responsive.css">
     <title>Educate - Transforming Online Education</title>
 </head>
 <body>
       <nav class="navbar background h-nav-resp">
         <ul class="nav-list v-class-resp">
-            <div class="logo"><img src="img/logo.jpg" alt="logo"></div>
+            <div class="logo"><img src="logo.jpg" alt="logo"></div>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
@@ -38,7 +38,7 @@
           </div>
 
           <div class="secondHalf">
-            <img src="img/logo.jpg" alt="Education">
+            <img src="logo.jpg" alt="Education">
           </div>
         </div>
       </section>
@@ -51,7 +51,7 @@
           Education in India covers different levels and types of learning, such as early childhood education, primary education, secondary education, higher education, and vocational education. It varies significantly according to different factors, such as location (urban or rural), gender, caste, religion, language, and disability. </p>
         </div>
         <div class="thumbnail">
-          <img src="img/logo2.jpg" alt="laptop image" class="imgFluid">
+          <img src="logo2.jpg" alt="laptop image" class="imgFluid">
         </div>
       </section>
 
@@ -63,7 +63,7 @@
           At the primary and secondary level, India has a large private school system complementing the government run schools, with 29% of students receiving private education in the 6 to 14 age group.[21] Certain post-secondary technical schools are also private. The private education market in India had a revenue of US$450 million in 2008, but is projected to be a US$40 billion market.</p>
         </div>
         <div class="thumbnail">
-          <img src="img/logo1.jpg" alt="laptop image" class="imgFluid">
+          <img src="logo1.jpg" alt="laptop image" class="imgFluid">
         </div>
       </section>
 
@@ -75,7 +75,7 @@
           Secular institutions cropped up along Buddhist monasteries. These institutions imparted practical education.</p>
         </div>
         <div class="thumbnail">
-          <img src="img/logo.jpg" alt="laptop image" class="imgFluid">
+          <img src="logo.jpg" alt="laptop image" class="imgFluid">
         </div>
       </section>
   
